--- a/css/main.css
+++ b/css/main.css
@@ -33,14 +33,15 @@ input {
     text-align: center;
     float: right;
 }
+
 #startButton {
-    width: 20%;
-    margin: 30px 40% 0 40%;
+    width: 40%;
+    margin: 40px 30% 0 30%;
 }
 
 .col {
     float: left;
-    height: 86%;
+    height: 90%;
     overflow: auto;
 }
 
@@ -52,4 +53,29 @@ input {
 .col.col-lg {
     width: 60%;
     background-color: #c7e4d4;
+}
+
+.tip {
+    text-align: right;
+    font-size: 14px;
+}
+
+.rabbit:before, .wolf:before, .tree:before, .bush:before {
+    content: '\25A0  ';
+}
+
+.rabbit {
+    color: #C2C2A3;
+}
+
+.wolf {
+    color: #333399;
+}
+
+.tree {
+    color: #009933;
+}
+
+.bush {
+    color: #99FF66;
 }
